Fix once again navbar separators vertical alignment

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -137,6 +137,7 @@ header nav {
 
 header nav h2 {
   font-size: 1.1rem;
+  margin: 0;
 }
 
 header nav .nav-page:after {
